Fix overflow icon size

--- a/src/styles/_iconview.scss
+++ b/src/styles/_iconview.scss
@@ -75,6 +75,10 @@
         bottom: 0;
         right: 0;
       }
+
+      &__icon {
+        width: 100%;
+      }
     }
 
     &__label {
